adds erc20 to pruner

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   },
   "dependencies": {
+    "@daohaus/baal-contracts": "^1.2.17",
     "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/contracts-upgradeable": "^4.9.3"
   }
